--- a/src/styles.css
+++ b/src/styles.css
@@ -59,13 +59,13 @@ h2:first-letter {
   color: gray;
 }
 
+.card-body {
+  margin: 0 auto;
+}
+
 #icon-card {
   margin-bottom: 15px;
   display: block;
-}
-
-#search-from {
-  padding-left: 15px;
 }
 
 #dayTemp {
@@ -76,15 +76,20 @@ h2:first-letter {
 #nightTemp {
   color: gray;
   text-decoration: none;
-  padding-left: 5px;
+  margin-left: 2px;
 }
 
 footer {
   margin-bottom: 35px;
 }
 
-footer a {
+small a {
   font-weight: bold;
+  text-decoration: none;
+  color: black;
+}
+
+small a:hover {
   text-decoration: none;
   color: black;
 }
