--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .weather-app {
-  margin: 50px 20px 20px 20px;
+  margin: 30px 20px 20px 20px;
   padding: 40px 20px 40px 20px;
   background-color: rgba(255, 255, 255, 0.3);
   -webkit-box-shadow: 6px 6px 21px -6px rgba(0, 0, 0, 0.27);
@@ -56,40 +56,31 @@ h2:first-letter {
 }
 
 .active {
-  color: gray;
+  color: gray !important;
 }
 
-.card-body {
-  margin: 0 auto;
-}
-
-#icon-card {
-  margin-bottom: 15px;
+.weather-forecast img {
   display: block;
+  margin: 0 auto;
+  height: 48px;
+  width: 48px;
 }
 
-#dayTemp {
-  text-decoration: none;
-  color: black;
-}
-
-#nightTemp {
-  color: gray;
-  text-decoration: none;
-  margin-left: 2px;
+#temp-min {
+  padding-left: 15px;
 }
 
 footer {
   margin-bottom: 35px;
 }
 
-small a {
+footer a {
   font-weight: bold;
   text-decoration: none;
   color: black;
 }
 
-small a:hover {
+footer a:hover {
   text-decoration: none;
   color: black;
 }
